Version 0.9.0.9000
------------------------------------------------------------------------------
New functions:
* `props()` to calculate proportions in a vector, supporting multiple logical statements.
* `or_to_rr()` to convert odds ratio estimates into risk ratio estimates.

Version 0.9.0
------------------------------------------------------------------------------
General:
* Functions `std()` and `center()` were removed and are now in the sjmisc-package (https://cran.r-project.org/package=sjmisc).

New functions:
* `svyglm.nb()` to compute survey-weighted negative binomial regressions.
* `xtab_statistics()` to compute various measures of assiciation for contingency tables.
* Added S3-`model.frame()`-function for `gee`-models.

Changes to functions:
* `se()` gets a `type`-argument, which applies to generalized linear mixed models. You can now choose to compute either standard errors with delta-method approximation for fixed effects only, or standard errors for joint random and fixed effects.

Bug fixes:
* `prop()` did not work for non-labelled data frames when used with grouped data frames.

Version 0.8.0
------------------------------------------------------------------------------
New functions:
* `svy()` to compute robust standard errors for weighted models, adjusting the residual degrees of freedom to simulate sampling weights.
* `zero_count()` to check whether a poisson-model is over- or underfitting zero-counts in the outcome.
* `pred_accuracy()` to calculate accuracy of predictions from model fit.
* `outliers()` to detect outliers in (generalized) linear models.
* `heteroskedastic()` to check linear models for (non-)constant error variance.
* `autocorrelation()` to check linear models for auto-correlated residuals.
* `normality()` to check whether residuals in linear models are normally distributed or not.
* `multicollin()` to check predictors in a model for multicollinearity.
* `check_assumptions()` to run a set of model assumption checks.
