@@ -36,8 +36,10 @@ export(hoslem_gof)
 export(icc)
 export(inequ_trend)
 export(levene_test)
+export(md)
 export(mean_n)
 export(mic)
+export(mn)
 export(mse)
 export(multicollin)
 export(mwu)
@@ -62,6 +64,7 @@ export(rse)
 export(sd_pop)
 export(se)
 export(se_ybar)
+export(sm)
 export(smpsize_lmm)
 export(split_half)
 export(std_beta)
@@ -134,6 +137,7 @@ importFrom(stats,ftable)
 importFrom(stats,glm)
 importFrom(stats,kruskal.test)
 importFrom(stats,lm)
+importFrom(stats,median)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,model.response)
