@@ -3,6 +3,7 @@ Version 0.9.0.9000
 New functions:
 * `props()` to calculate proportions in a vector, supporting multiple logical statements.
 * `or_to_rr()` to convert odds ratio estimates into risk ratio estimates.
+* `mn()`, `md()` and `sm()` to calculate mean, median or sum of a vector, but using `na.rm = TRUE` as default.
 
 Version 0.9.0
 ------------------------------------------------------------------------------
